

package compute_engine;

service ComputeEngine {
  rpc Compute (ComputeRequest) returns (ComputeResponse);
}

message ComputeRequest {
  repeated int32 value = 1;
}

message ComputeResponse {
  optional string result = 1;
}
